Login and Register Working

--- a/PredictionLeague.API/appsettings.json
+++ b/PredictionLeague.API/appsettings.json
@@ -17,5 +17,11 @@
       "ClientId": "175696988758-a66ur3ucbggkq1mq6r7i907a63d36e4t.apps.googleusercontent.com",
       "ClientSecret": "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"
     }
+  },
+
+  "JwtSettings": {
+    "Issuer": "https://localhost:7075",
+    "Audience": "https://localhost:7132",
+    "Secret": "A_VERY_LONG_AND_SUPER_SECRET_KEY_GOES_HERE_12345"
   }
 }
