--- a/PredictionLeague.Web/PredictionLeague.Web/appsettings.json
+++ b/PredictionLeague.Web/PredictionLeague.Web/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "JwtSettings": {
+    "Issuer": "https://localhost:7075",
+    "Audience": "https://localhost:7132",
+    "Secret": "A_VERY_LONG_AND_SUPER_SECRET_KEY_GOES_HERE_12345"
+  }
 }
