My Details Page Completed

--- a/PredictionLeague.API/PredictionLeague.API.csproj
+++ b/PredictionLeague.API/PredictionLeague.API.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PredictionLeague.Infrastructure\PredictionLeague.Infrastructure.csproj" />
+    <ProjectReference Include="..\PredictionLeague.Shared\PredictionLeague.Shared.csproj" />
   </ItemGroup>
 
 </Project>
