--- a/PredictionLeague.Core/PredictionLeague.Core.csproj
+++ b/PredictionLeague.Core/PredictionLeague.Core.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="9.0.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PredictionLeague.Shared\PredictionLeague.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
