--- a/PredictionLeague.Web/PredictionLeague.Web.Client/PredictionLeague.Web.Client.csproj
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/PredictionLeague.Web.Client.csproj
@@ -14,7 +14,12 @@
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.17" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.6" />
         <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.5.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\PredictionLeague.Shared\PredictionLeague.Shared.csproj" />
     </ItemGroup>
 
 </Project>
