Split Core into Domain and Application

--- a/PredictionLeague.Infrastructure/PredictionLeague.Infrastructure.csproj
+++ b/PredictionLeague.Infrastructure/PredictionLeague.Infrastructure.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PredictionLeague.Core\PredictionLeague.Core.csproj" />
+    <ProjectReference Include="..\PredictionLeague.Application\PredictionLeague.Application.csproj" />
   </ItemGroup>
 
 </Project>
