--- a/PredictionLeague.Application/PredictionLeague.Application.csproj
+++ b/PredictionLeague.Application/PredictionLeague.Application.csproj
@@ -7,12 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
-    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="9.0.6" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\PredictionLeague.Domain\PredictionLeague.Domain.csproj" />
     <ProjectReference Include="..\PredictionLeague.Shared\PredictionLeague.Shared.csproj" />
   </ItemGroup>
 
