--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Properties/launchSettings.json
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Properties/launchSettings.json
@@ -1,11 +1,19 @@
+//{
+//  "profiles": {
+//    "PredictionLeague.Web.Client": {
+//      "commandName": "Project"
+//    },
+//    "WSL": {
+//      "commandName": "WSL2",
+//      "distributionName": ""
+//    }
+//  }
+//}
+
 {
   "profiles": {
     "PredictionLeague.Web.Client": {
       "commandName": "Project"
-    },
-    "WSL": {
-      "commandName": "WSL2",
-      "distributionName": ""
     }
   }
 }
