--- a/PredictionLeague.API/appsettings.Development.json
+++ b/PredictionLeague.API/appsettings.Development.json
@@ -10,7 +10,7 @@
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
-        "Microsoft.AspNetCore": "Warning"
+        "Microsoft.AspNetCore": "Error"
       }
     },
     "WriteTo": [
