--- a/PredictionLeague.API/PredictionLeague.API.csproj
+++ b/PredictionLeague.API/PredictionLeague.API.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
+        <PackageReference Include="MediatR" Version="13.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.*" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.*" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.*" />
