Tidy API Program File

--- a/PredictionLeague.API/appsettings.Development.json
+++ b/PredictionLeague.API/appsettings.Development.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AllowedOrigins": "https://localhost:7132",
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console" ],
     "MinimumLevel": {
