Refactor Project Setup

--- a/PredictionLeague.Web/PredictionLeague.Web/PredictionLeague.Web.csproj
+++ b/PredictionLeague.Web/PredictionLeague.Web/PredictionLeague.Web.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\PredictionLeague.API\PredictionLeague.API.csproj" />
     <ProjectReference Include="..\..\PredictionLeague.Application\PredictionLeague.Application.csproj" />
     <ProjectReference Include="..\..\PredictionLeague.Contracts\PredictionLeague.Contracts.csproj" />
     <ProjectReference Include="..\..\PredictionLeague.Validators\PredictionLeague.Validators.csproj" />
