--- a/PredictionLeague.Web/PredictionLeague.Web/Properties/launchSettings.json
+++ b/PredictionLeague.Web/PredictionLeague.Web/Properties/launchSettings.json
@@ -7,7 +7,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
+      "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}&api_base_uri=https://localhost:7075",
       "applicationUrl": "https://localhost:7132;http://localhost:5132"
     }
   },
