Stop Using Magic Strings

--- a/PredictionLeague.Contracts/PredictionLeague.Contracts.csproj
+++ b/PredictionLeague.Contracts/PredictionLeague.Contracts.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PredictionLeague.Domain\PredictionLeague.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
