Add Production Config

--- a/PredictionLeague.API/appsettings.Production.json
+++ b/PredictionLeague.API/appsettings.Production.json
@@ -10,7 +10,7 @@
   "AllowedOrigins": "https://www.thepredictions.co.uk",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ANTONY_PC;Database=PredictionLeague;Trusted_Connection=True;Encrypt=False;"
+    "DefaultConnection": "Server=mssql04.mssql.prositehosting.net;Database=ThePredictions;User Id=AntonyWillson;Password=THns_05c4r;"
   },
 
   "Authentication": {
@@ -21,8 +21,8 @@
   },
 
   "JwtSettings": {
-    "Issuer": "https://localhost:7075",
-    "Audience": "https://localhost:7132",
+    "Issuer": "https://www.thepredictions.co.uk",
+    "Audience": "https://www.thepredictions.co.uk",
     "Secret": "581fd7dc6cfb151c4cb519fb7d103d63",
     "ExpiryMinutes": 15,
     "RefreshTokenExpiryDays": 7
