--- a/PredictionLeague.Web/PredictionLeague.Web/appsettings.Production.json
+++ b/PredictionLeague.Web/PredictionLeague.Web/appsettings.Production.json
@@ -6,13 +6,6 @@
     }
   },
 
-  "AllowedHosts": "*",
-  "AllowedOrigins": "https://www.thepredictions.co.uk",
-
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=ANTONY_PC;Database=PredictionLeague;Trusted_Connection=True;Encrypt=False;"
-  },
-
   "Authentication": {
     "Google": {
       "ClientId": "175696988758-a66ur3ucbggkq1mq6r7i907a63d36e4t.apps.googleusercontent.com",
@@ -20,9 +13,13 @@
     }
   },
 
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=mssql04.mssql.prositehosting.net;Database=ThePredictions;User Id=AntonyWillson;Password=THns_05c4r;Encrypt=false;Trusted_Connection=false;"
+  },
+
   "JwtSettings": {
-    "Issuer": "https://localhost:7075",
-    "Audience": "https://localhost:7132",
+    "Issuer": "https://www.thepredictions.co.uk",
+    "Audience": "https://www.thepredictions.co.uk",
     "Secret": "581fd7dc6cfb151c4cb519fb7d103d63",
     "ExpiryMinutes": 15,
     "RefreshTokenExpiryDays": 7
