--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/appsettings.Development.json
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
-  //THIS IS THE API CONFIG
+  //THIS IS THE WEB.CLIENT CONFIG
 
   "ApiBaseUrl": "https://localhost:7132/api",
   "AllowedOrigins": "https://localhost:7132/api",
