--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/appsettings.Production.json
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/appsettings.Production.json
@@ -1,3 +1,65 @@
 {
-  "ApiBaseUrl": "https://www.thepredictions.co.uk"
+  // THIS IS THE WEB.CLIENT CONFIG
+
+  "ApiBaseUrl": "https://www.thepredictions.co.uk/api",
+  "AllowedOrigins": "https://www.thepredictions.co.uk/api",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=mssql04.mssql.prositehosting.net;Database=ThePredictions;User Id=AntonyWillson;Password=THns_05c4r;Encrypt=false;Trusted_Connection=false;"
+  },
+
+  "JwtSettings": {
+    "Issuer": "https://www.thepredictions.co.uk",
+    "Audience": "https://www.thepredictions.co.uk",
+    "Secret": "581fd7dc6cfb151c4cb519fb7d103d63",
+    "ExpiryMinutes": 15,
+    "RefreshTokenExpiryDays": 7
+  },
+
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Expressions",
+      "Serilog.Sinks.Datadog.Logs"
+    ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "filter": {
+            "Name": "ByExcluding",
+            "Args": {
+              "expression": "RequestPath like '/_framework/%' or RequestPath like '/_blazor/%'"
+            }
+          }
+        }
+      },
+      {
+        "Name": "DatadogLogs",
+        "Args": {
+          "apiKey": "${Datadog:ApiKey}",
+          "service": "prediction-league-web",
+          "source": "csharp",
+          "host": "production",
+          "configuration": {
+            "Url": "https://http-intake.logs.datadoghq.eu/"
+          }
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ],
+    "Properties": {
+      "Application": "PredictionLeague.Web.Server"
+    }
+  }
 }
