--- a/PredictionLeague.API/appsettings.json
+++ b/PredictionLeague.API/appsettings.json
@@ -1,17 +1,7 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+  //THIS IS THE API CONFIG
 
   "AllowedHosts": "*",
-  "AllowedOrigins": "https://www.thepredictions.co.uk",
-
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=ANTONY_PC;Database=PredictionLeague;Trusted_Connection=True;Encrypt=False;"
-  },
 
   "Authentication": {
     "Google": {
@@ -20,12 +10,8 @@
     }
   },
 
-  "JwtSettings": {
-    "Issuer": "https://localhost:7075",
-    "Audience": "https://localhost:7132",
-    "Secret": "581fd7dc6cfb151c4cb519fb7d103d63",
-    "ExpiryMinutes": 15,
-    "RefreshTokenExpiryDays": 7
+  "Datadog": {
+    "ApiKey": "3cb036a3c88d8fd71631f8578b7f743f"
   },
 
   "MediatR": {
