--- a/PredictionLeague.Web/PredictionLeague.Web.Client/PredictionLeague.Web.Client.csproj
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/PredictionLeague.Web.Client.csproj
@@ -26,6 +26,10 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Content Update="wwwroot\appsettings.Development.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+      </Content>
       <Content Update="wwwroot\appsettings.Production.json">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
