--- a/PredictionLeague.Web/PredictionLeague.Web/PredictionLeague.Web.csproj
+++ b/PredictionLeague.Web/PredictionLeague.Web/PredictionLeague.Web.csproj
@@ -14,6 +14,10 @@
     <ProjectReference Include="..\PredictionLeague.Web.Client\PredictionLeague.Web.Client.csproj" />
     <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.17" />
+    <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+    <PackageReference Include="Serilog.Expressions" Version="5.0.0" />
+    <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="Serilog.Sinks.Datadog.Logs" Version="0.5.6" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.0" />
   </ItemGroup>
