Fix Google Login

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/appsettings.Development.json
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   //THIS IS THE WEB.CLIENT CONFIG
 
-  "ApiBaseUrl": "https://localhost:7132/api",
+  "ApiBaseUrl": "https://localhost:7132",
   "AllowedOrigins": "https://localhost:7132/api",
 
   "ConnectionStrings": {
@@ -9,7 +9,7 @@
   },
 
   "JwtSettings": {
-    "Issuer": "https://localhost:7132",
+    "Issuer": "https://localhost:7075",
     "Audience": "https://localhost:7132",
     "Secret": "581fd7dc6cfb151c4cb519fb7d103d63",
     "ExpiryMinutes": 15,
