--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/appsettings.Production.json
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/appsettings.Production.json
@@ -1,7 +1,7 @@
 {
   // THIS IS THE WEB.CLIENT CONFIG
 
-  "ApiBaseUrl": "https://www.thepredictions.co.uk/api",
+  "ApiBaseUrl": "https://www.thepredictions.co.uk",
   "AllowedOrigins": "https://www.thepredictions.co.uk/api",
 
   "ConnectionStrings": {
