--- a/PredictionLeague.Web/PredictionLeague.Web/appsettings.Development.json
+++ b/PredictionLeague.Web/PredictionLeague.Web/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   //THIS IS THE WEB CONFIG
 
-  "ApiBaseUrl": "https://localhost:7132/api",
+  "ApiBaseUrl": "https://localhost:7132",
   "AllowedOrigins": "https://localhost:7132/api",
 
   "ConnectionStrings": {
@@ -25,7 +25,8 @@
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
-        "Microsoft.AspNetCore": "Warning"
+        "Microsoft.AspNetCore": "Warning",
+        "Microsoft.AspNetCore.Authentication": "Debug"
       }
     },
     "WriteTo": [
