--- a/PredictionLeague.Web/PredictionLeague.Web/appsettings.Production.json
+++ b/PredictionLeague.Web/PredictionLeague.Web/appsettings.Production.json
@@ -14,5 +14,39 @@
     "Secret": "581fd7dc6cfb151c4cb519fb7d103d63",
     "ExpiryMinutes": 15,
     "RefreshTokenExpiryDays": 7
+  },
+
+  "Serilog": {
+    "Using": [
+      "Serilog.Expressions",
+      "Serilog.Sinks.Datadog.Logs"
+    ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft.AspNetCore": "Warning",
+        "Microsoft.AspNetCore.Authentication": "Debug"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "DatadogLogs",
+        "Args": {
+          "apiKey": "3cb036a3c88d8fd71631f8578b7f743f",
+          "service": "prediction-league-web",
+          "source": "csharp",
+          "host": "production",
+          "configuration": {
+            "Url": "https://http-intake.logs.datadoghq.eu/"
+          }
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext"
+    ],
+    "Properties": {
+      "Application": "PredictionLeague.Web"
+    }
   }
 }
