Login Working on Mobile

--- a/PredictionLeague.Web/PredictionLeague.Web/appsettings.Development.json
+++ b/PredictionLeague.Web/PredictionLeague.Web/appsettings.Development.json
@@ -42,7 +42,7 @@
           "apiKey": "3cb036a3c88d8fd71631f8578b7f743f",
           "service": "prediction-league-web",
           "source": "csharp",
-          "host": "production",
+          "host": "development",
           "configuration": {
             "Url": "https://http-intake.logs.datadoghq.eu/"
           }
