--- a/PredictionLeague.Web/PredictionLeague.Web/appsettings.Production.json
+++ b/PredictionLeague.Web/PredictionLeague.Web/appsettings.Production.json
@@ -1,52 +1,12 @@
 {
-  // THIS IS THE WEB CONFIG
+  //THIS IS THE WEB PRODUCTION CONFIG
 
   "ApiBaseUrl": "https://www.thepredictions.co.uk",
   "AllowedOrigins": "https://www.thepredictions.co.uk/api",
+  
+  "KeyVaultUri": "https://the-predictions-prod.vault.azure.net/",
 
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=mssql04.mssql.prositehosting.net;Database=ThePredictions;User Id=AntonyWillson;Password=THns_05c4r;Encrypt=false;Trusted_Connection=false;"
-  },
-
-  "JwtSettings": {
-    "Issuer": "https://www.thepredictions.co.uk",
-    "Audience": "https://www.thepredictions.co.uk",
-    "Secret": "581fd7dc6cfb151c4cb519fb7d103d63",
-    "ExpiryMinutes": 15,
-    "RefreshTokenExpiryDays": 7
-  },
-
-  "Serilog": {
-    "Using": [
-      "Serilog.Expressions",
-      "Serilog.Sinks.Datadog.Logs"
-    ],
-    "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft.AspNetCore": "Warning",
-        "Microsoft.AspNetCore.Authentication": "Debug"
-      }
-    },
-    "WriteTo": [
-      {
-        "Name": "DatadogLogs",
-        "Args": {
-          "apiKey": "3cb036a3c88d8fd71631f8578b7f743f",
-          "service": "prediction-league-web",
-          "source": "csharp",
-          "host": "production",
-          "configuration": {
-            "Url": "https://http-intake.logs.datadoghq.eu/"
-          }
-        }
-      }
-    ],
-    "Enrich": [
-      "FromLogContext"
-    ],
-    "Properties": {
-      "Application": "PredictionLeague.Web"
-    }
+  "Datadog": {
+    "Host": "production"
   }
 }
