--- a/PredictionLeague.API/PredictionLeague.API.csproj
+++ b/PredictionLeague.API/PredictionLeague.API.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.4.0" />
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
         <PackageReference Include="MediatR" Version="13.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.*" />
@@ -24,14 +25,13 @@
     <ItemGroup>
         <ProjectReference Include="..\PredictionLeague.Application\PredictionLeague.Application.csproj" />
         <ProjectReference Include="..\PredictionLeague.Contracts\PredictionLeague.Contracts.csproj" />
+        <ProjectReference Include="..\PredictionLeague.Hosting.Shared\PredictionLeague.Hosting.Shared.csproj" />
         <ProjectReference Include="..\PredictionLeague.Infrastructure\PredictionLeague.Infrastructure.csproj" />
         <ProjectReference Include="..\PredictionLeague.Validators\PredictionLeague.Validators.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <Content Update="appsettings.json" CopyToPublishDirectory="Never" />
         <Content Update="appsettings.Development.json" CopyToPublishDirectory="Never" />
-        <Content Update="appsettings.Production.json" CopyToPublishDirectory="Never" />
     </ItemGroup>
 
 </Project>
