--- a/PredictionLeague.Web/PredictionLeague.Web/appsettings.Development.json
+++ b/PredictionLeague.Web/PredictionLeague.Web/appsettings.Development.json
@@ -1,59 +1,11 @@
 {
-  //THIS IS THE WEB CONFIG
+  //THIS IS THE WEB DEVELOPMENT CONFIG
 
   "ApiBaseUrl": "https://localhost:7132",
   "AllowedOrigins": "https://localhost:7132/api",
+  "KeyVaultUri": "https://the-predictions-dev.vault.azure.net/",
 
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=ANTONY_PC;Database=PredictionLeague;Trusted_Connection=True;Encrypt=False;"
-  },
-
-  "JwtSettings": {
-    "Issuer": "https://localhost:7132",
-    "Audience": "https://localhost:7132",
-    "Secret": "581fd7dc6cfb151c4cb519fb7d103d63",
-    "ExpiryMinutes": 15,
-    "RefreshTokenExpiryDays": 7
-  },
-
-  "Serilog": {
-    "Using": [
-      "Serilog.Sinks.Console",
-      "Serilog.Expressions",
-      "Serilog.Sinks.Datadog.Logs"
-    ],
-    "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft.AspNetCore": "Warning",
-        "Microsoft.AspNetCore.Authentication": "Debug"
-      }
-    },
-    "WriteTo": [
-      {
-        "Name": "Console",
-        "Args": {
-          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
-        }
-      },
-      {
-        "Name": "DatadogLogs",
-        "Args": {
-          "apiKey": "3cb036a3c88d8fd71631f8578b7f743f",
-          "service": "prediction-league-web",
-          "source": "csharp",
-          "host": "development",
-          "configuration": {
-            "Url": "https://http-intake.logs.datadoghq.eu/"
-          }
-        }
-      }
-    ],
-    "Enrich": [
-      "FromLogContext"
-    ],
-    "Properties": {
-      "Application": "PredictionLeague.Web"
-    }
+  "Datadog": {
+    "Host": "development"
   }
 }
