--- a/PredictionLeague.Web/PredictionLeague.Web.Client/PredictionLeague.Web.Client.csproj
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/PredictionLeague.Web.Client.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
         <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.17" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.17" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.17" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.6" />
         <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
