Small UI Updates

--- a/PredictionLeague.Web/PredictionLeague.Web/appsettings.Development.json
+++ b/PredictionLeague.Web/PredictionLeague.Web/appsettings.Development.json
@@ -3,7 +3,7 @@
 
   "ApiBaseUrl": "https://localhost:7132",
   "AllowedOrigins": "https://localhost:7132/api",
-  "KeyVaultUri": "https://the-predictions-dev.vault.azure.net/",
+  "KeyVaultUri": "https://the-predictions-prod.vault.azure.net/",
 
   "Datadog": {
     "Host": "development"
