--- a/PredictionLeague.Web/PredictionLeague.Web/appsettings.json
+++ b/PredictionLeague.Web/PredictionLeague.Web/appsettings.json
@@ -43,7 +43,7 @@
       "Serilog.Sinks.Datadog.Logs"
     ],
     "MinimumLevel": {
-      "Default": "Information",
+      "Default": "Warning",
       "Override": {
         "Microsoft.AspNetCore": "Warning"
       }
