--- a/PredictionLeague.Infrastructure/PredictionLeague.Infrastructure.csproj
+++ b/PredictionLeague.Infrastructure/PredictionLeague.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="brevo_csharp" Version="1.1.1" />
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="9.0.6" />
