--- a/PredictionLeague.Web/PredictionLeague.Web/appsettings.json
+++ b/PredictionLeague.Web/PredictionLeague.Web/appsettings.json
@@ -14,6 +14,15 @@
     }
   },
 
+  "Brevo": {
+    "ApiKey": "${Brevo-ApiKey}",
+    "SendFromName": "The Predictions League",
+    "SendFromEmail": "antony@thepredictions.co.uk",
+    "Templates": {
+      "JoinLeagueRequest": 1
+    }
+  },
+
   "ConnectionStrings": {
     "DataConnection": "${Database-ConnectionString}"
   },
@@ -26,7 +35,7 @@
     "Issuer": "${ApiBaseUrl}",
     "Audience": "${ApiBaseUrl}",
     "Secret": "${Jwt-Secret}",
-    "ExpiryMinutes": 15,
+    "ExpiryMinutes": 60,
     "RefreshTokenExpiryDays": 7
   },
 
