Add Prediction Chasing Email

--- a/PredictionLeague.Web/PredictionLeague.Web/appsettings.json
+++ b/PredictionLeague.Web/PredictionLeague.Web/appsettings.json
@@ -19,7 +19,8 @@
     "SendFromName": "The Predictions League",
     "SendFromEmail": "antony@thepredictions.co.uk",
     "Templates": {
-      "JoinLeagueRequest": 1
+      "JoinLeagueRequest": 1,
+      "PredictionsMissing": 2 
     }
   },
 
