Check Teams Exist on Season Creation

--- a/PredictionLeague.Web/PredictionLeague.Web/appsettings.json
+++ b/PredictionLeague.Web/PredictionLeague.Web/appsettings.json
@@ -20,7 +20,7 @@
     "SendFromEmail": "antony@thepredictions.co.uk",
     "Templates": {
       "JoinLeagueRequest": 1,
-      "PredictionsMissing": 2 
+      "PredictionsMissing": 2
     }
   },
 
@@ -30,6 +30,12 @@
 
   "Datadog": {
     "ApiKey": "${Datadog-ApiKey}"
+  },
+
+  "FootballApi": {
+    "ApiKey": "${FootballApi-ApiKey}",
+    "BaseUrl": "https://v3.football.api-sports.io/",
+    "SchedulerApiKey": "${FootballApi-SchedulerApiKey}"
   },
 
   "JwtSettings": {
