--- a/PredictionLeague.Web/PredictionLeague.Web/PredictionLeague.Web.csproj
+++ b/PredictionLeague.Web/PredictionLeague.Web/PredictionLeague.Web.csproj
@@ -1,26 +1,37 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+        <Nullable>enable</Nullable>
+        <ImplicitUsings>enable</ImplicitUsings>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\PredictionLeague.API\PredictionLeague.API.csproj" />
-    <ProjectReference Include="..\..\PredictionLeague.Application\PredictionLeague.Application.csproj" />
-    <ProjectReference Include="..\..\PredictionLeague.Contracts\PredictionLeague.Contracts.csproj" />
-    <ProjectReference Include="..\..\PredictionLeague.Validators\PredictionLeague.Validators.csproj" />
-    <ProjectReference Include="..\PredictionLeague.Web.Client\PredictionLeague.Web.Client.csproj" />
-    <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.4.0" />
-    <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.17" />
-    <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
-    <PackageReference Include="Serilog.Expressions" Version="5.0.0" />
-    <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
-    <PackageReference Include="Serilog.Sinks.Datadog.Logs" Version="0.5.6" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.7.1" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\..\PredictionLeague.API\PredictionLeague.API.csproj" />
+        <ProjectReference Include="..\..\PredictionLeague.Application\PredictionLeague.Application.csproj" />
+        <ProjectReference Include="..\..\PredictionLeague.Contracts\PredictionLeague.Contracts.csproj" />
+        <ProjectReference Include="..\..\PredictionLeague.Validators\PredictionLeague.Validators.csproj" />
+        <ProjectReference Include="..\PredictionLeague.Web.Client\PredictionLeague.Web.Client.csproj" />
+        <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.4.0" />
+        <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.17" />
+        <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+        <PackageReference Include="Serilog.Expressions" Version="5.0.0" />
+        <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+        <PackageReference Include="Serilog.Sinks.Datadog.Logs" Version="0.5.6" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.7.1" />
+    </ItemGroup>
 
+    <Target Name="AddCssCacheBusting" AfterTargets="Publish">
+        <PropertyGroup>
+            <CssVersion>$([System.DateTime]::UtcNow.ToString("yyyyMMddHHmmss"))</CssVersion>
+            <PublishWwwRoot>$(PublishDir)wwwroot\</PublishWwwRoot>
+        </PropertyGroup>
+
+        <Message Importance="high" Text="Adding CSS cache busting version: $(CssVersion)" />
+        <Exec Command="powershell -NoProfile -Command &quot;(Get-Content '$(PublishWwwRoot)index.html') -replace 'href=\&quot;css/app\.css\&quot;', 'href=\&quot;css/app.css?v=$(CssVersion)\&quot;' | Set-Content '$(PublishWwwRoot)index.html'&quot;" />
+        <Exec Command="powershell -NoProfile -Command &quot;(Get-Content '$(PublishWwwRoot)css/app.css') -replace '@import url\(\x27((?!https?://)[^)]+)\x27\)', '@import url(''$1?v=$(CssVersion)'')' | Set-Content '$(PublishWwwRoot)css/app.css'&quot;" />
+        <Message Importance="high" Text="CSS cache busting applied successfully!" />
+    </Target>
 </Project>
