Refactor DI pattern; add Datadog logging support
Refactored DependencyInjection.cs to use an extension class pattern for improved encapsulation. Simplified GetClientIpAddress logic. Updated FluentValidation package reference to prevent trimming and removed unused configuration package. Added Serilog Datadog sink to Web project for enhanced logging.

--- a/PredictionLeague.Web/PredictionLeague.Web/PredictionLeague.Web.csproj
+++ b/PredictionLeague.Web/PredictionLeague.Web/PredictionLeague.Web.csproj
@@ -15,6 +15,7 @@
         <ProjectReference Include="..\..\PredictionLeague.Validators\PredictionLeague.Validators.csproj" />
         <ProjectReference Include="..\PredictionLeague.Web.Client\PredictionLeague.Web.Client.csproj" />
         <PackageReference Include="Serilog.Expressions" Version="5.0.0" />
+        <PackageReference Include="Serilog.Sinks.Datadog.Logs" Version="0.6.0" />
     </ItemGroup>
 
     <!--
