--- a/PredictionLeague.Infrastructure/PredictionLeague.Infrastructure.csproj
+++ b/PredictionLeague.Infrastructure/PredictionLeague.Infrastructure.csproj
@@ -10,12 +10,17 @@
         <!-- ReSharper disable once VulnerablePackage -->
         <PackageReference Include="brevo_csharp" Version="1.1.1" />
         <PackageReference Include="Dapper" Version="2.1.66" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="10.0.2" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="10.0.2">
+          <TreatAsUsed>true</TreatAsUsed>
+        </PackageReference>
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="10.0.2" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="10.0.2" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="10.0.2">
+          <TreatAsUsed>true</TreatAsUsed>
+        </PackageReference>
         <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.4" />
-        <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="10.0.2" />
-        <PackageReference Include="Serilog.AspNetCore" Version="10.0.0" />
+        <PackageReference Include="Serilog.AspNetCore" Version="10.0.0">
+          <TreatAsUsed>true</TreatAsUsed>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
