--- a/PredictionLeague.Web/PredictionLeague.Web/PredictionLeague.Web.csproj
+++ b/PredictionLeague.Web/PredictionLeague.Web/PredictionLeague.Web.csproj
@@ -13,9 +13,15 @@
         <ProjectReference Include="..\..\PredictionLeague.Application\PredictionLeague.Application.csproj" />
         <ProjectReference Include="..\..\PredictionLeague.Contracts\PredictionLeague.Contracts.csproj" />
         <ProjectReference Include="..\..\PredictionLeague.Validators\PredictionLeague.Validators.csproj" />
-        <ProjectReference Include="..\PredictionLeague.Web.Client\PredictionLeague.Web.Client.csproj" />
-        <PackageReference Include="Serilog.Expressions" Version="5.0.0" />
-        <PackageReference Include="Serilog.Sinks.Datadog.Logs" Version="0.6.0" />
+        <ProjectReference Include="..\PredictionLeague.Web.Client\PredictionLeague.Web.Client.csproj">
+          <TreatAsUsed>true</TreatAsUsed>
+        </ProjectReference>
+        <PackageReference Include="Serilog.Expressions" Version="5.0.0">
+          <TreatAsUsed>true</TreatAsUsed>
+        </PackageReference>
+        <PackageReference Include="Serilog.Sinks.Datadog.Logs" Version="0.6.0">
+          <TreatAsUsed>true</TreatAsUsed>
+        </PackageReference>
     </ItemGroup>
 
     <!--
