--- a/src/PredictionLeague.Web/appsettings.Development.json
+++ b/src/PredictionLeague.Web/appsettings.Development.json
@@ -1,10 +1,10 @@
 {
-  //THIS IS THE WEB DEVELOPMENT CONFIG
+  //THIS IS THE WEB DEVELOPMENT CONFIG (dev.thepredictions.co.uk)
 
-  "AllowedHosts": "localhost",
-  "ApiBaseUrl": "https://localhost:7132",
-  "AllowedOrigins": "https://localhost:7132/api",
-  "KeyVaultUri": "https://the-predictions-prod.vault.azure.net/",
+  "AllowedHosts": "dev.thepredictions.co.uk",
+  "ApiBaseUrl": "https://dev.thepredictions.co.uk",
+  "AllowedOrigins": "https://dev.thepredictions.co.uk/api",
+  "KeyVaultUri": "https://the-predictions-dev.vault.azure.net/",
 
   "Datadog": {
     "Host": "development"
