Finish Environment Publish Profiles

--- a/src/PredictionLeague.Web.Client/wwwroot/appsettings.Local.json
+++ b/src/PredictionLeague.Web.Client/wwwroot/appsettings.Local.json
@@ -1,5 +1,5 @@
 {
-  "ApiBaseUrl": "https://dev.thepredictions.co.uk",
+  "ApiBaseUrl": "https://localhost:7132",
   "Logging": {
     "LogLevel": {
       "Default": "Warning",
