Fix Match Rescheduling

--- a/src/PredictionLeague.Web/appsettings.Local.json
+++ b/src/PredictionLeague.Web/appsettings.Local.json
@@ -4,7 +4,7 @@
   "AllowedHosts": "localhost",
   "ApiBaseUrl": "https://localhost:7132",
   "AllowedOrigins": "https://localhost:7132/api",
-  "KeyVaultUri": "https://the-predictions-dev.vault.azure.net/",
+  "KeyVaultUri": "https://the-predictions-prod.vault.azure.net/",
 
   "Datadog": {
     "Host": "local"
